MonetDB/src/mal/Tests/tst104.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## check propagation of type variables over bats
## can be checked after bat module has been added
#
#command f(a:any::1, b:bat[any::2,any::1],c:any::2):any = dummy;
!ERROR: address of function 'dummy' not found
command Admin.f(a:any::1,b:bat[any::2,any::1],c:any::2):any = dummy;	#0 polymorphic:(f:any->0)(a:any::1->1)(b:bat[any::2,any::1]->2)(c:any::2->3)
#
#b:= bat.new(str,int);
#a:= f(1,b,"hello");
#
function Admin.main():int;	#0:(main:int->0)
	b := bat.new(str,int);	#1:(b:bat[str,int]->1)(str:str->2)(int:int->3)
	a := Admin.f(1,b,"hello");	#2:(a:any->4)($5:int->5)(b:bat[str,int]->1)($6:str->6)
end function;	#3:
!ERROR: MALexception:Admin.main[2]:address of function missing
>